manifests/02-networkpolicy-allow-ingress-pprof.yaml
# Allow ingress to cloud-credential-operator:6060 (pprof)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-pprof
  namespace: openshift-cloud-credential-operator
  annotations:
    capability.openshift.io/name: CloudCredential
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  ingress:
  - ports:
    - protocol: TCP
      port: 6060
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - cloud-credential-operator
  policyTypes:
  - Ingress
